--- a/roles/homeassistant/templates/configuration.yaml
+++ b/roles/homeassistant/templates/configuration.yaml
@@ -9,7 +9,7 @@ mqtt:
   # MQTT base topic for zigbee2mqtt MQTT messages
   base_topic: zigbee2mqtt
   # MQTT server URL
-  server: 'mqtt://{{ ansible_default_ipv4.address }}:{{ mosquitto_port }}'
+  server: 'mqtt://{{ mosquitto_address }}:{{ mosquitto_port }}'
   # MQTT server authentication, uncomment if required:
   # user: my_user
   # password: my_password
