--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -73,6 +73,7 @@
           volumes:
             - "{{homeassistant_config_folder}}:/config"
             - "{{homeassistant_config_folder}}/docker/run:/etc/services.d/home-assistant/run"
+            - "{{homeassistant_media_folder}}:/media"
             - /etc/localtime:/etc/localtime:ro
           restart: unless-stopped
           privileged: true
