--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -84,6 +84,18 @@
             - PUID={{uid}}
             - PGID={{uid}}
             - UMASK=007
+        shortumation:
+          container_name: shortumation
+          image: "asosnovsky/shortumation-amd64:latest"
+          volumes:
+            - "{{homeassistant_config_folder}}:/config"
+          extra_hosts:
+            - "host.docker.internal:host-gateway"
+          environment:
+            - "SUPERVISOR_TOKEN={{ha_access_token}}"
+            - HASSIO_WS=wss://host.docker.internal:8123/api/websocket
+          ports:
+            - "{{shortumation_http_port}}:8000"
         code-server:
           image: lscr.io/linuxserver/code-server
           container_name: code-server
