Add uptime kuma

--- a/roles/caddy/templates/Caddyfile
+++ b/roles/caddy/templates/Caddyfile
@@ -21,6 +21,11 @@ shortumation.lan {
         log
 }
 
+uptime.lan {
+        reverse_proxy {{ ansible_default_ipv4.address }}:{{ uptime_kuma_http_port }}
+        tls internal
+        log
+}
 
 portainer.lan {
         reverse_proxy {{ ansible_default_ipv4.address }}:{{ portainer_http_port }}
