--- a/setup.yml
+++ b/setup.yml
@@ -11,6 +11,7 @@
     portainer_http_port: 9000
     homeassistant_http_port: 8123
     shortumation_http_port: 8088
+    uptime_kuma_http_port: 3001
     vscode_http_port: 8443
     nodered_http_port: 1880
     mosquitto_address: "{{ ansible_default_ipv4.address }}"
@@ -38,6 +39,7 @@
     caddy_folder: "{{config_root}}/caddy"
     caddy_data_folder: "{{config_root}}/caddy/data"
     caddy_config_folder: "{{config_root}}/caddy/config"
+    uptime_kuma_data_folder: "{{config_root}}/uptime-kuma/data"
 
   #remote_user: root
   roles:
@@ -51,5 +53,6 @@
     - { role: homeassistant, become: yes, tags: ["ha"] }
     - { role: caddy, become: yes, tags: ["caddy"] }
     - { role: pihole, become: yes, tags: ["pihole"] }
+    - { role: monitoring, become: yes, tags: ["monitoring"] }
 
     #- media
