Fix pihole problems

--- a/roles/pihole/tasks/main.yml
+++ b/roles/pihole/tasks/main.yml
@@ -41,9 +41,9 @@
           container_name: pihole
           image: pihole/pihole:latest
           ports:
-            - "53:53/tcp"
-            - "53:53/udp"
-            - "67:67/udp"
+            - "{{ ansible_default_ipv4.address }}:53:53/tcp"
+            - "{{ ansible_default_ipv4.address }}:53:53/udp"
+            - "{{ ansible_default_ipv4.address }}:67:67/udp"
             - "{{ pihole_http_port }}:80/tcp"
           environment:
             TZ: 'Europe/Berlin'
