--- a/roles/homeassistant/templates/configuration.yaml
+++ b/roles/homeassistant/templates/configuration.yaml
@@ -1,5 +1,6 @@
 # Home Assistant integration (MQTT discovery)
 homeassistant: true
+availability: true
 
 # allow new devices to join
 permit_join: false
