--- a/roles/homeassistant/templates/frigate.yml
+++ b/roles/homeassistant/templates/frigate.yml
@@ -12,33 +12,34 @@ birdseye:
 ffmpeg:
   hwaccel_args: -hwaccel vaapi -hwaccel_device /dev/dri/renderD128 -hwaccel_output_format yuv420p
 
+motion:
+  threshold: 15
+  improve_contrast: True
+
+record:
+  enabled: True
+  retain:
+    days: 2
+    mode: motion
+
+snapshots:
+  enabled: True
+  retain:
+    default: 7
+
 cameras:
   picam: # <------ Name the camera
     ffmpeg:
       inputs:
-        - path: rtsp://192.168.50.242:8554/unicast
+        - path: rtsp://192.168.50.6:8554/unicast
           roles:
             - detect
             - rtmp
             - record
-    rtmp:
-      enabled: False
-    detect:
-      width: 640
-      height: 480
-  motioneye:
-    ffmpeg:
-      input_args: -avoid_negative_ts make_zero -fflags nobuffer -flags low_delay -strict experimental -fflags +genpts+discardcorrupt -use_wallclock_as_timestamps 1 -c:v mjpeg
       output_args:
-        record: -f segment -segment_time 10 -segment_format mp4 -reset_timestamps 1 -strftime 1 -c:v libx264 -an
-        rtmp: -c:v libx264 -an -f flv
-      inputs:
-        - path: http://192.168.50.209:8081
-          roles:
-            - detect
-            - rtmp
-            - record
+        record: -f segment -segment_time 10 -segment_format mp4 -reset_timestamps 1 -strftime 1 -c:v copy -c:a aac
+        rtmp: -c:v copy -c:a aac -f flv
     detect:
-      width: 640
-      height: 480
-      fps: 15
+      width: 1280
+      height: 720
+      fps: 5
