--- a/setup.yml
+++ b/setup.yml
@@ -11,6 +11,7 @@
     portainer_http_port: 9000
     homeassistant_http_port: 8123
     uptime_kuma_http_port: 3001
+    wud_http_port: 3000
     vscode_http_port: 8443
     nodered_http_port: 1880
     mosquitto_address: "{{ ansible_default_ipv4.address }}"
