Restart caddy container

--- a/roles/caddy/handlers/main.yml
+++ b/roles/caddy/handlers/main.yml
@@ -1,6 +1,6 @@
-- name: reload caddy config
+- name: reload caddy
   become: yes
-  community.docker.docker_container_exec:
-    container: caddy
-    command: caddy reload
-    chdir: /etc/caddy
+  community.docker.docker_container:
+    name: caddy
+    state: started
+    restart: yes
