Add basic navidrome config

--- a/roles/caddy/templates/Caddyfile
+++ b/roles/caddy/templates/Caddyfile
@@ -62,6 +62,12 @@ jellyfin.lan {
         log
 }
 
+music.lan {
+        reverse_proxy {{ ansible_default_ipv4.address }}:{{ navidrome_http_port }}
+        tls internal
+        log
+}
+
 pi.hole {
         reverse_proxy {{ ansible_default_ipv4.address }}:{{ pihole_http_port }}
         tls internal
