Add initial sunshine domain config

--- a/roles/caddy/templates/Caddyfile
+++ b/roles/caddy/templates/Caddyfile
@@ -68,6 +68,12 @@ music.lan {
         log
 }
 
+sunshine.lan {
+        reverse_proxy {{ sunshine_address }}:{{ sunshine_http_port }}
+        tls internal
+        log
+}
+
 pi.hole {
         reverse_proxy {{ ansible_default_ipv4.address }}:{{ pihole_http_port }}
         tls internal
