--- a/roles/monitoring/tasks/main.yml
+++ b/roles/monitoring/tasks/main.yml
@@ -32,10 +32,11 @@
             - /var/run/docker.sock:/var/run/docker.sock
           ports:
             - "{{wud_http_port}}:3000"
+          restart: always
           environment:
             - WUD_TRIGGER_MQTT_MOSQUITTO_URL=mqtt://{{ mosquitto_address }}:{{ mosquitto_port }}
             - WUD_TRIGGER_MQTT_MOSQUITTO_HASS_ENABLED=true
-            - WUD_REGISTRY_LSCR_USERNAME=kirel
+            - WUD_REGISTRY_GHCR_TOKEN={{ gh_access_token }}
             - WUD_REGISTRY_LSCR_TOKEN={{ gh_access_token }}
           labels:
             - 'wud.tag.include=^\d+\.\d+\.\d+$$'
